# vite-plugin-native-rust

./: .gitignore  .vercelignore  CHANGELOG.md  CONTRIBUTING.md  DEMOS-PLAN.md  MEASUREMENTS-VERCEL.md  MEASUREMENTS.md  PLAN.md  PUBLISH-PLAN.md  README.md  SECURITY.md  SPIKE-FINDINGS.md  VERCEL-DEPLOY.md  VERCEL-PLAN.md  VERCEL-RECON.md  package-lock.json  package.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
app/: heavy.server.ts  routes.ts
app/routes/: api.hello.ts  home.tsx  slow-cpu-rust.tsx  slow-cpu.tsx  static.tsx
docs/: benchmarks.md  deployment-vercel.md  how-it-works.md  nitro.md  rust-patterns.md  testing.md  troubleshooting.md  typescript.md  when-not-to-use.md
examples/astro/: .gitignore  README.md  astro.config.mjs  package.json  tsconfig.json
examples/astro/native/: Cargo.toml  package.json
examples/astro/scripts/: serve-vercel-output.mjs  vercel-build.sh  vercel-install.sh
examples/nextjs/: .gitignore  README.md  next.config.ts  package.json  tsconfig.json
examples/nextjs/app/: layout.tsx  page.tsx
examples/nextjs/lib/: native.server.ts
examples/nextjs/native/: Cargo.toml  index.js  package.json
examples/nextjs/scripts/: vercel-build.sh  vercel-install.sh
examples/nuxt/: .gitignore  README.md  nitro-rust.ts  nuxt.config.ts  package.json
examples/nuxt/app/: app.vue
examples/nuxt/native/: Cargo.toml  package.json
examples/qwik/: .gitignore  README.md  package.json  tsconfig.json  vercel.json  vite.config.ts
examples/qwik/api/: entry.ts
examples/react-router/: package.json  react-router.config.ts  tsconfig.json
examples/remix-v3/: .gitignore  README.md  package.json  server.ts  tsconfig.json  vercel.json
examples/showcase/: package.json  vite.config.ts
examples/showcase/crates/hashing/: Cargo.toml  index.d.ts  package.json
examples/showcase/crates/hashing/src/: lib.rs
examples/showcase/crates/images/: Cargo.toml  README.md  index.d.ts  package.json
examples/showcase/crates/images/src/: lib.rs
examples/showcase/crates/search/: Cargo.toml  index.d.ts  package.json
examples/showcase/crates/search/corpus/: README.md  corpus.jsonl  generate.mjs
examples/showcase/crates/search/src/: lib.rs
examples/showcase/crates/transform/: Cargo.toml  index.d.ts  package.json
examples/showcase/crates/transform/src/: lib.rs
examples/solidstart/: .gitignore  README.md  app.config.ts  package.json  tsconfig.json
examples/sveltekit/: README.md  package.json  vercel.json  vite.config.ts
examples/tanstack-start/: .gitignore  README.md  package.json  tsconfig.json  vite.config.ts
native/: Cargo.toml
native/src/: lib.d.rs.ts  lib.rs
plugin/: crate.test.ts  dedupe.ts
scripts/: vercel-build.sh  vercel-install.sh
(+106 files in other folders)
