[package]
name = "native"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", default-features = false, features = ["napi4", "async"] }
napi-derive = "3"
sha2 = "0.10"
hex = "0.4"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
