[package]
name = "search"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", default-features = false, features = ["napi4", "async"] }
napi-derive = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tantivy = "0.26"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
