[package]
name = "transform"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ammonia = "4"
lol_html = "3"
napi = { version = "3", default-features = false, features = ["napi4", "async"] }
napi-derive = "3"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
